// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.hbs [glimmer] format 1`] = `
"Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID' (2:11)
  1 | <A >
> 2 | x, {{@name}
    |           ^
  3 |"
`;

exports[`invalid-2.hbs [glimmer] format 1`] = `
"Unclosed element \`@name\` (3:0)
  1 | <a>
  2 |
> 3 | <{@name>
    | ^^^^^^^^
  4 |"
`;

exports[`invalid-3.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (3:3)
  1 | <a>
  2 |
> 3 | {{}}
    |   ^
  4 |"
`;

exports[`snippet: IMG [glimmer] format 1`] = `
"Unclosed element \`IMG\` (1:0)
> 1 | <IMG>
    | ^^^^^"
`;

exports[`snippet: INPUT [glimmer] format 1`] = `
"Unclosed element \`INPUT\` (1:0)
> 1 | <INPUT>
    | ^^^^^^^"
`;

exports[`snippet: area [glimmer] format 1`] = `
"<area> elements do not need end tags. You should remove it (1:6)
> 1 | <area></area>
    |      ^^^^^^^"
`;

exports[`snippet: base [glimmer] format 1`] = `
"<base> elements do not need end tags. You should remove it (1:6)
> 1 | <base></base>
    |      ^^^^^^^"
`;

exports[`snippet: basefont [glimmer] format 1`] = `
"Unclosed element \`basefont\` (1:0)
> 1 | <basefont>
    | ^^^^^^^^^^"
`;

exports[`snippet: bgsound [glimmer] format 1`] = `
"Unclosed element \`bgsound\` (1:0)
> 1 | <bgsound>
    | ^^^^^^^^^"
`;

exports[`snippet: br [glimmer] format 1`] = `
"<br> elements do not need end tags. You should remove it (1:4)
> 1 | <br></br>
    |    ^^^^^"
`;

exports[`snippet: col [glimmer] format 1`] = `
"<col> elements do not need end tags. You should remove it (1:5)
> 1 | <col></col>
    |     ^^^^^^"
`;

exports[`snippet: command [glimmer] format 1`] = `
"<command> elements do not need end tags. You should remove it (1:9)
> 1 | <command></command>
    |         ^^^^^^^^^^"
`;

exports[`snippet: div [glimmer] format 1`] = `
"Unclosed element \`div\` (1:0)
> 1 | <div>
    | ^^^^^"
`;

exports[`snippet: embed [glimmer] format 1`] = `
"<embed> elements do not need end tags. You should remove it (1:7)
> 1 | <embed></embed>
    |       ^^^^^^^^"
`;

exports[`snippet: frame [glimmer] format 1`] = `
"Unclosed element \`frame\` (1:0)
> 1 | <frame>
    | ^^^^^^^"
`;

exports[`snippet: hr [glimmer] format 1`] = `
"<hr> elements do not need end tags. You should remove it (1:4)
> 1 | <hr></hr>
    |    ^^^^^"
`;

exports[`snippet: imG [glimmer] format 1`] = `
"Unclosed element \`imG\` (1:0)
> 1 | <imG>
    | ^^^^^"
`;

exports[`snippet: image [glimmer] format 1`] = `
"Unclosed element \`image\` (1:0)
> 1 | <image>
    | ^^^^^^^"
`;

exports[`snippet: img [glimmer] format 1`] = `
"<img> elements do not need end tags. You should remove it (1:5)
> 1 | <img></img>
    |     ^^^^^^"
`;

exports[`snippet: input [glimmer] format 1`] = `
"<input> elements do not need end tags. You should remove it (1:7)
> 1 | <input></input>
    |       ^^^^^^^^"
`;

exports[`snippet: isindex [glimmer] format 1`] = `
"Unclosed element \`isindex\` (1:0)
> 1 | <isindex>
    | ^^^^^^^^^"
`;

exports[`snippet: keygen [glimmer] format 1`] = `
"<keygen> elements do not need end tags. You should remove it (1:8)
> 1 | <keygen></keygen>
    |        ^^^^^^^^^"
`;

exports[`snippet: lINk [glimmer] format 1`] = `
"Unclosed element \`lINk\` (1:0)
> 1 | <lINk>
    | ^^^^^^"
`;

exports[`snippet: link [glimmer] format 1`] = `
"<link> elements do not need end tags. You should remove it (1:6)
> 1 | <link></link>
    |      ^^^^^^^"
`;

exports[`snippet: menuitem [glimmer] format 1`] = `
"Unclosed element \`menuitem\` (1:0)
> 1 | <menuitem>
    | ^^^^^^^^^^"
`;

exports[`snippet: meta [glimmer] format 1`] = `
"<meta> elements do not need end tags. You should remove it (1:6)
> 1 | <meta></meta>
    |      ^^^^^^^"
`;

exports[`snippet: nextid [glimmer] format 1`] = `
"Unclosed element \`nextid\` (1:0)
> 1 | <nextid>
    | ^^^^^^^^"
`;

exports[`snippet: param [glimmer] format 1`] = `
"<param> elements do not need end tags. You should remove it (1:7)
> 1 | <param></param>
    |       ^^^^^^^^"
`;

exports[`snippet: source [glimmer] format 1`] = `
"<source> elements do not need end tags. You should remove it (1:8)
> 1 | <source></source>
    |        ^^^^^^^^^"
`;

exports[`snippet: track [glimmer] format 1`] = `
"<track> elements do not need end tags. You should remove it (1:7)
> 1 | <track></track>
    |       ^^^^^^^^"
`;

exports[`snippet: wbr [glimmer] format 1`] = `
"<wbr> elements do not need end tags. You should remove it (1:5)
> 1 | <wbr></wbr>
    |     ^^^^^^"
`;

exports[`tilde-comments-1.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~}}
    |    ^
  2 |"
`;

exports[`tilde-comments-2.hbs [glimmer] format 1`] = `
"Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~~}}
    |    ^
  2 |"
`;
